--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@ Voici le fichier complet prêt à copier-coller dans `index.html` (assure-toi qu
                     <p><a href="tel:+33682363560">📞 +33 6 82 36 35 60</a></p>
                     <p><a href="mailto:yannick.lefevre@solana.de">📧 yannick.lefevre@solana.de</a></p>
                     <div id="president-photo" class="president-photo">
-                        <img src="yannick-lefevre.jpg" alt="Yannick Lefèvre">
+                        <img src="photo1.png" alt="Yannick Lefèvre">
                     </div>
                 </div>
                 
