--- a/index.html
+++ b/index.html
@@ -276,7 +276,7 @@ Voici le fichier complet prêt à copier-coller dans `index.html` (assure-toi qu
             <h2>📋 Contacts Directs</h2>
             <div class="quick-grid">
                 <div class="quick-item">
-                    <strong>🏢 Présidence</strong>
+                    <strong>🏢 Président</strong>
                     <p id="president-name" style="cursor:pointer; color:#0077b6; text-decoration:underline;">
                         Yannick Lefèvre
                     </p>
